--- a/app/slides.html
+++ b/app/slides.html
@@ -3,14 +3,14 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Using AngularJS with Bottle Framework for Web Apps</title>
-  <script src="jquery-1.4.2.min.js"></script>
-  <script src="angular-0.9.17.min.js" ng:autobind></script>
-  <script src="syntaxhighlighter/shCore.js"></script>
-  <script src="syntaxhighlighter/shBrushJScript.js"></script>
-  <script src="syntaxhighlighter/shBrushXml.js"></script>
-  <script src="slide.js"></script>
-  <link rel="stylesheet" href="syntaxhighlighter/shCore.css" type="text/css"/>
-  <link rel="stylesheet" href="syntaxhighlighter/shThemeDefault.css" type="text/css"/>
+  <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+  <script src="http://code.angularjs.org/0.9.15/angular-0.9.15.min.js" ng:autobind></script>
+  <script src="lib/syntaxhighlighter/shCore.js"></script>
+  <script src="lib/syntaxhighlighter/shBrushJScript.js"></script>
+  <script src="lib/syntaxhighlighter/shBrushXml.js"></script>
+  <script src="js/slide.js"></script>
+  <link rel="stylesheet" href="lib/syntaxhighlighter/shCore.css" type="text/css"/>
+  <link rel="stylesheet" href="lib/syntaxhighlighter/shThemeDefault.css" type="text/css"/>
 </head>
 <body>
 
