change path to static files

--- a/app/404.html
+++ b/app/404.html
@@ -10,7 +10,7 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
-<link rel="stylesheet" type="text/css" href="http://localhost:8080/css/404.css" />
+<link rel="stylesheet" type="text/css" href="http://angularbottle.herokuapp.com/css/404.css" />
 
 </head>
 
@@ -26,6 +26,6 @@
 <p class="createdBy"><a href="/">Go Home</a> | developer: wgx731</p>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-<script src="http://localhost:8080/js/script.js"></script>
+<script src="http://angularbottle.herokuapp.com/js/script.js"></script>
 </body>
 </html>
