--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
             <ng:view></ng:view>
 
         </div>
-        <script src="lib/angular/angular.js" ng:autobind ></script>
+        <script src="lib/angular/angular.min.js" ng:autobind ></script>
         <script src="js/services.js" ></script>
         <script src="js/controllers.js" ></script>
         <script src="js/filters.js" ></script>
