fix SyntaxHighlighter error

--- a/app/slides.html
+++ b/app/slides.html
@@ -5,12 +5,12 @@
   <title>Using AngularJS with Bottle Framework for Web Apps</title>
   <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
   <script src="http://code.angularjs.org/0.9.15/angular-0.9.15.min.js" ng:autobind></script>
-  <script src="http://alexgorbatchev.com/pub/sh/current/shCore.js"></script>
-  <script src="http://alexgorbatchev.com/pub/sh/current/shBrushJScript.js"></script>
-  <script src="http://alexgorbatchev.com/pub/sh/current/shBrushXml.js"></script>
+  <script src="http://alexgorbatchev.com.s3.amazonaws.com/pub/sh/3.0.83/scripts/shCore.js"></script>
+  <script src="http://alexgorbatchev.com.s3.amazonaws.com/pub/sh/3.0.83/scripts/shBrushJScript.js"></script>
+  <script src="http://alexgorbatchev.com.s3.amazonaws.com/pub/sh/3.0.83/scripts/shBrushXml.js"></script>
   <script src="js/slide.js"></script>
-  <link rel="stylesheet" href="http://alexgorbatchev.com/pub/sh/current/shCore.css" type="text/css"/>
-  <link rel="stylesheet" href="http://alexgorbatchev.com/pub/sh/current/shThemeDefault.css" type="text/css"/>
+  <link rel="stylesheet" href="http://alexgorbatchev.com.s3.amazonaws.com/pub/sh/3.0.83/styles/shCore.css" type="text/css"/>
+  <link rel="stylesheet" href="http://alexgorbatchev.com.s3.amazonaws.com/pub/sh/3.0.83/styles/shThemeDefault.css" type="text/css"/>
 </head>
 <body>
 
