Modify slides & add tests

--- a/app/slides.html
+++ b/app/slides.html
@@ -32,11 +32,12 @@
     <ul>
         <li>JavaScript Magic for building Web Apps</li>
         <li>Pure JavaScript</li>
-        <li>Open Source (<a href="https://github.com/angular/angular.js">@github</a>, MIT)</li>
+        <li>Open Source (<a href="https://github.com/angular/angular.js" target="_blank">@github</a>, MIT)</li>
         <li> <img src="img/google_logo.png"> Funded</li>
+        <li>Behavior Driven Development</li>
     </ul>
 
-    <b>From <a href="http://igorminar.github.com/ng-slides/angular-intro/index.html">IgorMinar angular intro slides</a></b>
+    <b>From <a href="http://igorminar.github.com/ng-slides/angular-intro/index.html" target="_blank">IgorMinar angular intro slides</a></b>
     </slide>
 
 
@@ -64,13 +65,13 @@
     <ul>
         <li>Micro web-framework for Python</li>
         <li>Single file &amp; no dependencies</li>
-        <li>Open Source (<a href="https://github.com/defnull/bottle">@github</a>, MIT)</li>
+        <li>Open Source (<a href="https://github.com/defnull/bottle" target="_blank">@github</a>, MIT)</li>
     </ul>
 
 
 
 
-    <b>From <a href="http://bottlepy.org/docs/dev/">Bottle.py website</a></b>
+    <b>From <a href="http://bottlepy.org/docs/dev/" target="_blank">Bottle.py website</a></b>
     </slide>
 
 
@@ -80,12 +81,10 @@
 
     <p class="center">
 
+        <a href="http://bottlepy.org/docs/dev/tutorial_app.html#complete-example-listing" target="_blank">Original TO-DO List example Toturial</a>
 
-        <a href="http://bottlepy.org/docs/dev/tutorial_app.html#complete-example-listing">Original TO-DO List example Toturial</a>
 
-
-        <a href="https://gist.github.com/1155998">My simple enhance version</a>
-
+        <a href="https://gist.github.com/1155998" target="_blank">My simple enhance version</a>
 
     </p>
     </slide>
@@ -111,11 +110,25 @@
     <!-- **** -->
 
 
+    <slide title="How simple they are ?" class="no-logo">
+
+
+    <div class="center">
+        <h3>1 file - 75 lines (20 main) in python for demo</h3>
+        <h3>Python + Javascript, you are ready to go</h3>
+        <h3>Total size: around 1MB</h3>
+    </div>
+
+    </slide>
+
+    <!-- **** -->
+
     <slide title="Demo Time" class="no-logo">
 
-
-
-    <a href="/"><h2 class="center"><img src="img/igoogle_logo.png"> Weather Reporter </h2></a>
+    <div class="center">
+        <a href="/" type="_blank"><h2><img src="img/igoogle_logo.png"> Weather Reporter </h2></a>
+        <h2> Source code <a href="" target="_blank">@github</a></h2>
+    </div>
     </slide>
 
 
@@ -125,29 +138,22 @@
     <h2 class="center">
         Thanks to  AngularJS &amp; Bottle.py
 
-        Follow me <a href="http://twitter.com/wgx731">@wgx731</a>
-
-        Source code <a href="">@github</a>
+        Follow me <a href="http://twitter.com/wgx731" target="_blank">@wgx731</a>
 
     </h2>
     </slide>
 
     <!-- **** -->
 
-    <slide title="RJ & More Info:">
+    <slide title="More Info:">
     <h2 class="center">
-        RJ: 
-
-        XXXXXXXX
-    </h2>
-
-    <h6>
         More Info:
-
-        <a href="http://angularjs.org">AngularJS main site</a>
-        <a href="http://bottlepy.org/docs/dev/">Bottle.py main site</a>
-        <a href="http://vimeo.com/28033972">Understand AngularJS</a>
-    </h6>
+        <a href="http://groups.google.com/group/angular" target="_blank">AngularJS mailing list</a>
+        <a href="http://groups.google.com/group/bottlepy" target="_blank">Bottle.py mailing list</a>
+        <a href="http://angularjs.org" target="_blank">AngularJS main site</a>
+        <a href="http://bottlepy.org/docs/dev/" target="_blank">Bottle.py main site</a>
+        <a href="http://vimeo.com/28033972" target="_blank">Understand AngularJS</a>
+    </h2>
     </slide>
 </body>
 </html>
