--- a/test/e2e/runner.html
+++ b/test/e2e/runner.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>End2end Test Runner</title>
-    <script src="../lib/angular/angular-scenario.js" ng:autotest></script>
-    <script src="scenarios.js"></script>
+    <script src="/lib/angular/angular-scenario.js" ng:autotest></script>
+    <script src="/scenarios.js"></script>
   </head>
   <body>
   </body>
