--- a/app/slides.html
+++ b/app/slides.html
@@ -127,7 +127,7 @@
 
     <div class="center">
         <a href="/" type="_blank"><h2><img src="img/igoogle_logo.png"> Weather Reporter </h2></a>
-        <h2> Source code <a href="" target="_blank">@github</a></h2>
+        <h2> Source code <a href="http://github.com/wgx731/AngularBottle" target="_blank">@github</a></h2>
     </div>
     </slide>
 
