--- a/test/e2e/runner.html
+++ b/test/e2e/runner.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>End2end Test Runner</title>
-    <script src="/lib/angular/angular-scenario.js" ng:autotest></script>
+    <script src="http://code.angularjs.org/0.10.0/angular-scenario-0.10.0.js" ng:autotest></script>
     <script src="/scenarios.js"></script>
   </head>
   <body>
